--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   </head>
   <body>
     <header>
-      <div class="company-name">IMMOBILIEN Invest</div>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About us</a></li>
-      </ul>
+      <nav>
+        <div class="logo">MyWebsite</div>
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">About us</a></li>
+        </ul>
+      </nav>
     </header>
+
+    <script src="script.js"></script>
   </body>
 </html>
