--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Document</title>
+    <title>IMMOBILIEN Invest</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="logo">MyWebsite</div>
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">About us</a></li>
-        </ul>
-      </nav>
-    </header>
+    
+    <div class="banner">
+        
+    </div>
 
     <script src="script.js"></script>
   </body>
