--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <body>
     
     <div class="banner">
-        
+        <div class="navbar">
+            <img src="zlogo.png" class="logo" title="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About us</a></li>
+            </ul>
+        </div>
     </div>
 
     <script src="script.js"></script>
