--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="zlogo.png" type="image/x-icon" >
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>IMMOBILIEN Invest</title>
   </head>
@@ -18,6 +19,8 @@
             </ul>
         </div>
     </div>
+
+    <div class="content"></div>
 
     <script src="script.js"></script>
   </body>
