--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="scene-container"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/PointerLockControls.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/OrbitControls.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
