--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         Your browser does not support the video tag.
       </video>
     </div>
-    
+
     <script src="script.js"></script>
+
+    <img src="logo.png" alt="Logo" id="logo" />
   </body>
 </html>
