--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
     <script src="script.js"></script>
 
-    <img src="logo.png" alt="Logo" id="logo" />
+    <img src="zlogo.png" alt="Logo" id="logo" />
   </body>
 </html>
