add logo on website

--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
     <script src="script.js"></script>
 
     <img src="zlogo.png" alt="Logo" id="logo" />
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
   </body>
 </html>
