adding slider on webpage

--- a/index.html
+++ b/index.html
@@ -14,21 +14,30 @@
       </video>
     </div>
 
+    <div class="slider">
+      <div class="videos">
+        <video id="video1" controls>
+          <source src="zsliderone.mp4" type="video/mp4" />
+        </video>
+        <video id="video1" controls>
+          <source src="zslidertwo.mp4" type="video/mp4" />
+        </video>
+        <video id="video1" controls>
+          <source src="zsliderthree.mp4" type="video/mp4" />
+        </video>
+        <video id="video1" controls>
+          <source src="zsliderfour.mp4" type="video/mp4" />
+        </video>
+        <video id="video1" controls>
+          <source src="zsliderfive.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <button onclick="prevVideo()">Previous</button>
+      <button onclick="nextVideo()">Next</button>
+    </div>
+
     <script src="script.js"></script>
 
     <img src="zlogo.png" alt="Logo" id="logo" />
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
   </body>
 </html>
