adding slider on webpage

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
     <div class="slider">
       <div class="videos">
-        <video id="video1" controls>
+        <video id="video1" class="slider-video" controls>
           <source src="zsliderone.mp4" type="video/mp4" />
         </video>
-        <video id="video1" controls>
+        <video id="video1" class="slider-video" controls>
           <source src="zslidertwo.mp4" type="video/mp4" />
         </video>
-        <video id="video1" controls>
+        <video id="video1" class="slider-video" controls>
           <source src="zsliderthree.mp4" type="video/mp4" />
         </video>
-        <video id="video1" controls>
+        <video id="video1" class="slider-video" controls>
           <source src="zsliderfour.mp4" type="video/mp4" />
         </video>
-        <video id="video1" controls>
+        <video id="video1" class="slider-video" controls>
           <source src="zsliderfive.mp4" type="video/mp4" />
         </video>
       </div>
