adding slider on webpage

--- a/index.html
+++ b/index.html
@@ -16,24 +16,22 @@
 
     <div class="slider">
       <div class="videos">
-        <video id="video1" class="slider-video" controls>
+        <video id="video1" class="slider-video" autoplay muted>
           <source src="zsliderone.mp4" type="video/mp4" />
         </video>
-        <video id="video1" class="slider-video" controls>
+        <video id="video2" class="slider-video" autoplay muted>
           <source src="zslidertwo.mp4" type="video/mp4" />
         </video>
-        <video id="video1" class="slider-video" controls>
+        <video id="video3" class="slider-video" autoplay muted>
           <source src="zsliderthree.mp4" type="video/mp4" />
         </video>
-        <video id="video1" class="slider-video" controls>
+        <video id="video4" class="slider-video" autoplay muted>
           <source src="zsliderfour.mp4" type="video/mp4" />
         </video>
-        <video id="video1" class="slider-video" controls>
+        <video id="video5" class="slider-video" autoplay muted>
           <source src="zsliderfive.mp4" type="video/mp4" />
         </video>
       </div>
-      <button onclick="prevVideo()">Previous</button>
-      <button onclick="nextVideo()">Next</button>
     </div>
 
     <script src="script.js"></script>
