--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -23,39 +27,65 @@
       </video>
     </div>
 
-    <div class="box">
-      <div class="swiper-container">
+    <!-- dsadsa -->
+    <section>
+      <div class="swiper-btns">
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+      <div class="swiper">
+        <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
+          <!-- Slides -->
           <div class="swiper-slide">
-            <video class="swiper-video" autoplay muted>
-              <source src="zsliderone.mp4" type="video/mp4" />
-            </video>
+            <h3>
+              <span>First <small>Firstly</small></span>
+            </h3>
+            <div class="slider-video">
+              <video src="zsliderone.mp4" type="video"></video>
+            </div>
           </div>
+
           <div class="swiper-slide">
-            <video class="swiper-video" autoplay muted>
-              <source src="zslidertwo.mp4" type="video/mp4" />
-            </video>
+            <h3>
+              <span>Second <small>Secondly</small></span>
+            </h3>
+            <div class="slider-video">
+              <video src="zsliderone.mp4" type="video"></video>
+            </div>
           </div>
+
           <div class="swiper-slide">
-            <video class="swiper-video" autoplay muted>
-              <source src="zsliderthree.mp4" type="video/mp4" />
-            </video>
+            <h3>
+              <span>Third <small>Thirdly</small></span>
+            </h3>
+            <div class="slider-video">
+              <video src="zsliderone.mp4" type="video"></video>
+            </div>
           </div>
+
           <div class="swiper-slide">
-            <video class="swiper-video" autoplay muted>
-              <source src="zsliderfour.mp4" type="video/mp4" />
-            </video>
+            <h3>
+              <span>Fourth <small>Fourthly</small></span>
+            </h3>
+            <div class="slider-video">
+              <video src="zsliderone.mp4" type="video"></video>
+            </div>
           </div>
+
           <div class="swiper-slide">
-            <video class="swiper-video" autoplay muted>
-              <source src="zsliderfive.mp4" type="video/mp4" />
-            </video>
+            <h3>
+              <span>Fifth <small>Fifthly</small></span>
+            </h3>
+            <div class="slider-video">
+              <video src="zsliderone.mp4" type="video"></video>
+            </div>
           </div>
+          ...
         </div>
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
+    </section>
+    <!-- dsadsadsa -->
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
@@ -63,3 +93,47 @@
     <img src="zlogo.png" alt="Logo" id="logo" />
   </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+<script>
+  const swiper = new Swiper(".swiper", {
+    loop: false,
+
+    slidesPerView: "auto",
+    spaceBetween: 33,
+    centeredSlides: true,
+
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+    on: {
+      init: function () {
+        const videos = document.querySelectorAll("videos");
+        const activeIndex = this.realIndex;
+        const activeSlide =
+          document.getElementsByClassName("swiper-slide")[activeIndex];
+        const activeVideo = activeSlide.getElementsByTagName("video")[0];
+        activeVideo.muted = true;
+        Array.prototype.forEach.call(videos, function (video) {
+          video.pause();
+          video.currentTime = 0;
+        });
+        activeVideo.play();
+      },
+      slideChange: function () {
+        const videos = document.querySelectorAll("videos");
+        const activeIndex = this.realIndex;
+        const activeSlide =
+          document.getElementsByClassName("swiper-slide")[activeIndex];
+        const activeVideo = activeSlide.getElementsByTagName("video")[0];
+        activeVideo.muted = true;
+        Array.prototype.forEach.call(videos, function (video) {
+          video.pause();
+          video.currentTime = 0;  
+        });
+        activeVideo.play();
+      },
+    },
+  });
+</script>
