--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <title>Document</title>
@@ -42,7 +38,7 @@
               <span>First <small>Firstly</small></span>
             </h3>
             <div class="slider-video">
-              <video src="zsliderone.mp4" type="video"></video>
+              <video src="zsliderone.mp4" type="video/mp4"></video>
             </div>
           </div>
 
@@ -51,7 +47,7 @@
               <span>Second <small>Secondly</small></span>
             </h3>
             <div class="slider-video">
-              <video src="zsliderone.mp4" type="video"></video>
+              <video src="zslidertwo.mp4" type="video/mp4"></video>
             </div>
           </div>
 
@@ -60,7 +56,7 @@
               <span>Third <small>Thirdly</small></span>
             </h3>
             <div class="slider-video">
-              <video src="zsliderone.mp4" type="video"></video>
+              <video src="zsliderthree.mp4" type="video/mp4"></video>
             </div>
           </div>
 
@@ -69,7 +65,7 @@
               <span>Fourth <small>Fourthly</small></span>
             </h3>
             <div class="slider-video">
-              <video src="zsliderone.mp4" type="video"></video>
+              <video src="zsliderfour.mp4" type="video/mp4"></video>
             </div>
           </div>
 
@@ -78,62 +74,50 @@
               <span>Fifth <small>Fifthly</small></span>
             </h3>
             <div class="slider-video">
-              <video src="zsliderone.mp4" type="video"></video>
+              <video src="zsliderfive.mp4" type="video/mp4"></video>
             </div>
           </div>
-          ...
         </div>
       </div>
     </section>
     <!-- dsadsadsa -->
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
-
+    <script>
+      const swiper = new Swiper(".swiper", {
+        loop: false,
+        slidesPerView: "auto",
+        spaceBetween: 33,
+        centeredSlides: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        on: {
+          init: function () {
+            const videos = document.querySelectorAll(".slider-video video");
+            const activeIndex = this.realIndex;
+            const activeVideo = videos[activeIndex];
+            Array.prototype.forEach.call(videos, function (video) {
+              video.pause();
+              video.currentTime = 0;
+            });
+            activeVideo.play();
+          },
+          slideChange: function () {
+            const videos = document.querySelectorAll(".slider-video video");
+            const activeIndex = this.realIndex;
+            const activeVideo = videos[activeIndex];
+            Array.prototype.forEach.call(videos, function (video) {
+              video.pause();
+              video.currentTime = 0;
+            });
+            activeVideo.play();
+          },
+        },
+      });
+    </script>
     <img src="zlogo.png" alt="Logo" id="logo" />
   </body>
 </html>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
-<script>
-  const swiper = new Swiper(".swiper", {
-    loop: false,
-
-    slidesPerView: "auto",
-    spaceBetween: 33,
-    centeredSlides: true,
-
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev",
-    },
-    on: {
-      init: function () {
-        const videos = document.querySelectorAll("videos");
-        const activeIndex = this.realIndex;
-        const activeSlide =
-          document.getElementsByClassName("swiper-slide")[activeIndex];
-        const activeVideo = activeSlide.getElementsByTagName("video")[0];
-        activeVideo.muted = true;
-        Array.prototype.forEach.call(videos, function (video) {
-          video.pause();
-          video.currentTime = 0;
-        });
-        activeVideo.play();
-      },
-      slideChange: function () {
-        const videos = document.querySelectorAll("videos");
-        const activeIndex = this.realIndex;
-        const activeSlide =
-          document.getElementsByClassName("swiper-slide")[activeIndex];
-        const activeVideo = activeSlide.getElementsByTagName("video")[0];
-        activeVideo.muted = true;
-        Array.prototype.forEach.call(videos, function (video) {
-          video.pause();
-          video.currentTime = 0;  
-        });
-        activeVideo.play();
-      },
-    },
-  });
-</script>
