making slider even better

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="preloader">
       <div class="preloader-inner">
         <div class="preloader-spinner"></div>
+        <div class="preloader-text">Loading...</div>
       </div>
     </div>
 
