--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <div class="preloader">
       <div class="preloader-inner">
-        <div class="preloader-spinner"></div>
+        <div class="preloader-spinner">
+          <div class="welcome-text">Welcome</div>
+        </div>
         <div class="preloader-text">Loading...</div>
       </div>
     </div>
