adding preloader before website is loaded

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="preloader">
       <div class="preloader-inner">
         <div class="preloader-spinner">
-          <div class="welcome-text">Welcome</div>
+          <div class="welcome-text">Welcome To IMMOBILIEN Invest</div>
         </div>
         <div class="preloader-text">
           <span id="loading-text">Loading</span>
