--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     </div>
 
     <div class="video-container">
-      <video id="videoPlayer" controls>
+      <video class="hidden" id="videoPlayer" controls>
         <source src="zhima.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
-
-    <section>
+<div class="slider">
+  
+</div>
+    <section class="hidden">
       <div class="swiper-btns">
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
