slider effect on scroll

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <title>Document</title>
   </head>
+
   <body>
     <div class="preloader">
       <div class="preloader-inner">
@@ -27,17 +28,18 @@
       </div>
     </div>
 
-    <div class="video-container">
-      <video class="hidden" id="videoPlayer" controls>
-        <source src="zhima.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
+    <div class="container">
+      <div class="section">
+      <div class="video-container">
+        <video class="hidden" id="videoPlayer" controls>
+          <source src="zmyway.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
     </div>
-<div class="slider">
-  
-</div>
-    <section class="hidden">
-      <div class="swiper-btns">
+
+    <section class="section svg-section">
+<div class="swiper-btns">
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
@@ -90,6 +92,8 @@
         </div>
       </div>
     </section>
+    </div>
+    
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
