adding slider effect on scroll down

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
           </div>
         </div>
       </section>
+
+      <section class="section">SCROLL UP ↑</section>  
     </div>
+
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
